--- a/style/board/mainBoard.css
+++ b/style/board/mainBoard.css
@@ -16,11 +16,8 @@
   max-width: 1980px;
   display: flex;
   flex-direction: column;
+  overflow-y: hidden;
   gap: 64px;
-}
-
-.boardSectionsContainer {
-  overflow-x: scroll;
 }
 
 /* ==================== Board Header ==================== */
@@ -126,7 +123,6 @@
   display: flex;
   justify-content: space-between;
   height: 100%;
-  overflow: hidden;
 }
 
 .boardSectionsSubContainer {
